Embedding logo on index page as well

--- a/_static/css/my-styles.css
+++ b/_static/css/my-styles.css
@@ -100,3 +100,9 @@ table {
 .logo {
     width: 85% !important
 }
+
+
+/* Padding of e logo on the index page */
+.align-center > img {
+    padding: 40px
+}
